# GodPlayer_windows

./: README.md  package.json
src/: App.jsx  index.jsx
src-tauri/: Cargo.toml  Config.json  tauri.conf.json
src-tauri/icons/: site.webmanifest
src-tauri/src/: main.rs
src/components/: Music.jsx
src/components/player/: Focus.jsx  Foldering.jsx  Player.jsx  Settings.jsx  Show.jsx  Song.jsx
src/css/: Settings.css  aside.css  focus.css  foldering.css  index.css  loading.css  music.css  pbtn.css  player.css  theme.css
